# Hateful-Memes-CLIP

./: .gitignore  README.md  datasets.py  engine.py  main.py  pyproject.toml
preprocess/: blip.py  caption.py  main.py  mask.py  masked.py  ofa.py
src/: caller.py  collator.py  datasets.py  engine.py  main.py  script.sh  train.py
